logs/dj-utils.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dj_utils'...
Listing './lib/python3.5/site-packages/dj_utils/fields'...
Listing './lib/python3.5/site-packages/dj_utils/forms'...
Compiling './lib/python3.5/site-packages/dj_utils/image.py'...
***   File "./lib/python3.5/site-packages/dj_utils/image.py", line 84
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_utils/locale'...
Listing './lib/python3.5/site-packages/dj_utils/locale/en'...
Listing './lib/python3.5/site-packages/dj_utils/locale/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dj_utils/locale/pl'...
Listing './lib/python3.5/site-packages/dj_utils/locale/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dj_utils/locale/ru'...
Listing './lib/python3.5/site-packages/dj_utils/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dj_utils/locale/uk'...
Listing './lib/python3.5/site-packages/dj_utils/locale/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/dj_utils/management'...
Listing './lib/python3.5/site-packages/dj_utils/management/commands'...
Compiling './lib/python3.5/site-packages/dj_utils/management/commands/clear_cache.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/clear_cache.py", line 9
    print 'Clear cache...'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dj_utils/management/commands/debug_email_server.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/debug_email_server.py", line 19
    print 'Debug email server is running. Now you can send emails to SMTP localhost:10250.'
                                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dj_utils/management/commands/dju_sqlcreateallindexes.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/dju_sqlcreateallindexes.py", line 43
    print '+Application: {}'.format(app)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dj_utils/management/commands/dju_sqldropallindexes.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/dju_sqldropallindexes.py", line 85
    print '+Application: {}'.format(app)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dj_utils/management/commands/makemessages_for_apps.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/makemessages_for_apps.py", line 63
    os.makedirs(dn, 0775)
                       ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dj_utils/management/commands/send_test_email.py'...
***   File "./lib/python3.5/site-packages/dj_utils/management/commands/send_test_email.py", line 22
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_utils/privateurl'...
Listing './lib/python3.5/site-packages/dj_utils/privateurl/migrations'...
Listing './lib/python3.5/site-packages/dj_utils/static'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.1'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.1/css'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.1/fonts'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.1/js'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.2'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.2/css'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.2/fonts'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.2/js'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.4'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.4/css'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.4/fonts'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.4/js'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.5'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.5/css'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.5/fonts'...
Listing './lib/python3.5/site-packages/dj_utils/static/bootstrap-3.3.5/js'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/css'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/css/jquery-ui'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/css/jquery-ui/smoothness'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/css/jquery-ui/smoothness/images'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/img'...
Listing './lib/python3.5/site-packages/dj_utils/static/dj_utils/js'...
Listing './lib/python3.5/site-packages/dj_utils/templates'...
Listing './lib/python3.5/site-packages/dj_utils/templates/dj_utils'...
Listing './lib/python3.5/site-packages/dj_utils/templates/dj_utils/mail'...
Listing './lib/python3.5/site-packages/dj_utils/templates/dj_utils/tags'...
Listing './lib/python3.5/site-packages/dj_utils/templatetags'...
Compiling './lib/python3.5/site-packages/dj_utils/upload.py'...
***   File "./lib/python3.5/site-packages/dj_utils/upload.py", line 151
    except EnvironmentError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dj_utils/views'...
Listing './lib/python3.5/site-packages/dj_utils-0.2.10.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/cyclictask.py'...
***   File "./lib/python3.5/site-packages/tests/cyclictask.py", line 8
    print 'Hello world'
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tests/tests'...
Compiling './lib/python3.5/site-packages/tests/tests/test_privateurl.py'...
***   File "./lib/python3.5/site-packages/tests/tests/test_privateurl.py", line 102
    except NoReverseMatch, e:
                         ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
